# user/delivery/http/user_controller.go
@@ -5,7 +5,10 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/nrmadi02/mini-project/domain"
 	"github.com/nrmadi02/mini-project/web/response"
+	uuid "github.com/satori/go.uuid"
+	"math"
 	"net/http"
+	"time"
 )
 
 type UserController interface {
@@ -13,12 +16,14 @@ type UserController interface {
 }
 
 type userController struct {
-	AuthUsecase domain.AuthUsecase
+	AuthUsecase   domain.AuthUsecase
+	RatingUsecase domain.RatingUsecase
 }
 
-func NewUserController(au domain.AuthUsecase) UserController {
+func NewUserController(au domain.AuthUsecase, ru domain.RatingUsecase) UserController {
 	return userController{
-		AuthUsecase: au,
+		AuthUsecase:   au,
+		RatingUsecase: ru,
 	}
 }
 
@@ -36,18 +41,73 @@ func (u userController) User(c echo.Context) error {
 	jwtBearer := c.Get("user").(*jwt.Token)
 	claims := jwtBearer.Claims.(jwt.MapClaims)
 
-	details, err := u.AuthUsecase.GetUserDetails(claims["UserID"].(string))
+	user, favorite, enterprises, err := u.AuthUsecase.GetUserDetails(claims["UserID"].(string))
 	if err != nil {
 		return response.FailResponse(c, http.StatusUnauthorized, false, err.Error())
 	}
 
+	var resEnterprises []interface{}
+	var resFavorite interface{}
+
+	if favorite.ID == uuid.FromStringOrNil("") {
+		resFavorite = nil
+	} else {
+		resFavorite = favorite
+	}
+
+	for _, enterprise := range enterprises {
+		rantings, err := u.RatingUsecase.GetAllRatingByEnterpriseID(enterprise.ID.String())
+		if err != nil {
+			return response.FailResponse(c, http.StatusBadRequest, false, err.Error())
+		}
+		var currRat int
+		for _, arr := range rantings {
+			currRat += arr.Rating
+		}
+		var rateAvr float64
+		rateAvr = float64(currRat) / float64(len(rantings))
+		resEnterprises = append(resEnterprises, struct {
+			ID          uuid.UUID   `json:"id"`
+			UserID      uuid.UUID   `json:"user_id"`
+			Name        string      `json:"name"`
+			NumberPhone string      `json:"number_phone"`
+			Address     string      `json:"address"`
+			Postcode    int         `json:"postcode"`
+			Description string      `json:"description"`
+			Latitude    string      `json:"latitude"`
+			Longitude   string      `json:"longitude"`
+			Status      int         `json:"status"`
+			Tags        interface{} `json:"tags"`
+			CreatedAt   time.Time   `json:"created_at"`
+			UpdatedAt   time.Time   `json:"updated_at"`
+			Rating      float64     `json:"rating"`
+		}{
+			ID:          enterprise.ID,
+			Name:        enterprise.Name,
+			NumberPhone: enterprise.NumberPhone,
+			UserID:      enterprise.UserID,
+			Address:     enterprise.Address,
+			Postcode:    enterprise.Postcode,
+			Description: enterprise.Description,
+			Status:      enterprise.Status,
+			Tags:        enterprise.Tags,
+			UpdatedAt:   enterprise.UpdatedAt,
+			CreatedAt:   enterprise.CreatedAt,
+			Latitude:    enterprise.Latitude,
+			Longitude:   enterprise.Longitude,
+			Rating:      math.Round(rateAvr*100) / 100,
+		})
+	}
+
 	res := response.UserDetailResponse{
-		Fullname:  details.Fullname,
-		Username:  details.Username,
-		Email:     details.Email,
-		ID:        details.ID,
-		CreatedAt: details.CreatedAt,
-		UpdatedAt: details.UpdatedAt,
+		Fullname:    user.Fullname,
+		Username:    user.Username,
+		Email:       user.Email,
+		ID:          user.ID,
+		Enterprises: resEnterprises,
+		Favorite:    resFavorite,
+		CreatedAt:   user.CreatedAt,
+		UpdatedAt:   user.UpdatedAt,
 	}
 
 	return response.SuccessResponse(c, http.StatusOK, true, "success get detail user", res)
